# flat-chat

./: .dockerignore  .env.example  .gitignore  AUTH.md  CLAUDE.md  HACKATHON.md  PLAN-schema-ownership-split.md  README.md  architecture.drawio  docker-compose.host.yml  docker-compose.tailnet.yml  docker-compose.yml  main.py  pyproject.toml  render.sh  shadow_diff.csv
services/backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  component-diagram.drawio  justfile  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 0001_app_users_sessions.py  0001_initial_schema.py  0002_app_bookmarks.py  0002_postgis_and_embedding_dim.py  0002_user_auth_columns.py  0003_base_contextual_tables.py  0004_geo_context_hardening.py  0005_gold_platinum.py  0006_spatial_junction_tables.py  0006_toilets_trees_remove_mss_score.py  0007_add_geo_context_extensions.py
services/backend/docs/: context-engineering-diagram.drawio
services/backend/src/app/: config.py  main.py  models.py
services/backend/src/app/routers/: conversations.py
services/backend/src/flat_chat/: main.py
services/backend/src/flat_chat/api/: agent.py  auth.py  bookmarks.py  chat.py  listings.py
services/backend/src/flat_chat/chat/: agent.py  backend.py  example_backend.py  lens_tools.py  llm_context.py  models.py  overlay_tools.py  schemas.py  service.py  session_state.py  sessions.py  state.py  title_gen.py  tools.py  ui_state.py
services/backend/src/flat_chat/core/: config.py  database.py  dependencies.py  embedder.py  observability.py
services/backend/src/flat_chat/listings/: __init__.py  bookmarks_service.py  context.py  geo.py  labels.py  lenses.py  models.py  overlays.py  projection.py  service.py  thresholds.py  types.py
services/backend/src/flat_chat/llm/: gateway.py
services/backend/src/flat_chat/routing/: __init__.py  errors.py  motis.py  osrm.py  service.py
services/backend/src/flat_chat/search/: buckets.py  distance.py  distances.py  geo_context_service.py  geo_filters.py  geo_models.py  models.py  places.py  schemas.py  service.py  transit.py  transit_overlays.py  transit_routes.py
services/backend/src/flat_chat/users/: auth.py  models.py  seed.py  service.py
services/backend/tests/: README.md  conftest.py  test_agent_tools.py  test_alembic_round_trip.py  test_geo_context_service.py
services/backend/tests/fixtures/: factories.py
services/backend/tests/integration/: test_alembic_round_trip.py  test_app_schema.py  test_auth.py  test_bookmarks_api.py  test_conversations_api.py  test_distance_service.py  test_gold_enrichment.py  test_listing_service.py  test_listings_api.py  test_place_service.py  test_search_null_geo_fields.py  test_search_service.py  test_session_store.py  test_transit_overlay_service.py  test_transit_route_service.py  test_world_schema_drift.py
services/backend/tests/unit/: test_apply_travel_time.py  test_capabilities_wiring.py  test_chat_service_title_hook.py  test_collapse_search_finishes.py  test_dispatch_history.py  test_example_backend.py  test_health.py  test_labels.py  test_lens_tools.py  test_llm_context.py  test_merge_incoming_state.py  test_observability.py  test_place_ref_parse.py  test_providers.py  test_proximity_tools.py  test_retry_suppression.py  test_routing_service.py  test_run_error.py  test_safe_mss_coercion.py  test_search_collapse_live.py  test_search_embed.py  test_search_statement.py  test_session_state.py  test_session_state_response.py  test_sessions.py  test_state_emission.py  test_title_generation.py  test_tools_state.py
services/ingestion/: CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
services/ingestion/alembic/: env.py
services/ingestion/alembic/versions/: 0001_initial_schema.py  0002_postgis_and_embedding_dim.py  0005_gold_platinum.py  0007_geo_context_v2.py  0008_transit_stops_in_named_places.py
services/ingestion/src/: config.py  db.py  main.py  pii.py
services/ingestion/src/bronze/: loader.py
services/ingestion/src/context_ingestion/: E-BerlinGTFS.py  E_BerlinGDI.py  L_Load.py  ingest_context.py
services/ingestion/src/geo_context/: README.md  config.py  datasets.yaml  landmark_seed.yaml  run.py
services/ingestion/src/geo_context/extract/: gtfs.py  osm.py  seed.py  wfs.py
services/ingestion/src/geo_context/icebox/: README.md
services/ingestion/src/geo_context/load/: postgis.py
services/ingestion/src/geo_context/tests/: test_aliases.py  test_transform_gtfs.py  test_wfs_pagination.py
services/ingestion/src/geo_context/transform/: aliases.py  gtfs.py  wfs.py
services/ingestion/src/gold/: __init__.py  enrich_buildings.py  enrich_listings.py  run.py
services/ingestion/src/iron/: loader.py
services/ingestion/src/platinum/: __init__.py  embed.py  run.py
services/ingestion/src/scraper/_lib/: db.js  package-lock.json  package.json  stealth.js
services/ingestion/src/scraper/housinganywhere/: housinganywheredetailscraper.js  housinganywherescraper.js  lib.js  package-lock.json  package.json
services/ingestion/src/scraper/immowelt/: immowelt.json  immoweltscraper.js  package-lock.json  package.json
services/ingestion/src/scraper/kleinanzeigen/: kleinanzeigen-debug-search-page-1-2026-05-08T19-24-56-660Z.html  kleinanzeigen-detail.json  kleinanzeigen.json  kleinanzeigendetailscraper.js  kleinanzeigenscraper.js  package-lock.json  package.json
services/ingestion/src/scraper/wg-gesucht/: lib.js  package-lock.json  package.json  wg-gesucht-source.html  wggesucht-detail.json  wggesucht.json  wggesuchtdetailscraper.js  wggesuchtscraper.js
services/ingestion/src/scraper/wohninberlin/: package-lock.json  (+3 more)
services/ingestion/src/scripts/: scrub_poster_pii.py
services/ingestion/src/silver/: embed.py  run.py  transformer.py  upsert.py
services/ingestion/tests/: conftest.py  test_embed.py  test_osm_extract.py  test_pii.py  test_seed.py  test_silver_sources.py  test_wfs_transform.py
services/ingestion/tests/integration/: test_alembic_round_trip.py  test_geocode.py  test_gold_enrichers_v2.py  test_pii_scan.py  test_silver_deduplication.py  test_silver_prune_stale.py
(+169 files in other folders)
