[project]
name = "flat-chat-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "pydantic-settings>=2.7",
    "pydantic-ai>=1.97,<2.0",
    "pydantic-ai-slim[ag-ui]>=1.97,<2.0",
    "pandas>=2.0",
    "geoalchemy2>=0.17",
    "httpx>=0.28",
    "arize-phoenix-otel>=0.16,<0.17",
    "openinference-instrumentation-pydantic-ai>=0.1,<0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a7",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flat_chat"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["B008"]  # Depends() in defaults is idiomatic FastAPI

[tool.pytest.ini_options]
testpaths = ["tests"]
