[project]
name = "flat-chat-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Two drivers: psycopg2 for Alembic + sync paths, asyncpg for the
    # FastAPI request path (see agent-compound-docs/decisions/async-database-layer.md).
    "psycopg2-binary>=2.9",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic-settings>=2.7",
    # Pydantic AI v2: use slim + explicit extras (v2's core no longer bundles
    # every provider). We only need ag-ui (the AGUIAdapter), anthropic
    # (AnthropicModel — preferred, native prompt caching), and openai
    # (OpenAIChatModel — Azure fallback). See agent-compound-docs/decisions/
    # pydantic-v2-migration.md.
    "pydantic-ai-slim[ag-ui,anthropic,openai]>=2.0,<3.0",
    "geoalchemy2>=0.17",
    "httpx>=0.28",
    "arize-phoenix-otel>=0.16,<0.17",
    # No v2-aware openinference release yet (latest is 0.1.x, built for
    # instrumentation version 4). We pin Pydantic AI's emitted instrumentation
    # to version 4 in core/observability.py so this enrichment still renders.
    "openinference-instrumentation-pydantic-ai>=0.1,<0.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
]

[dependency-groups]
dev = [
    # Floor at the locked formatter version. ruff's `format` style changes
    # between releases, so a stale local ruff (the old `>=0.11` floor) silently
    # reformats files CI's locked ruff rejects — `ruff format --check` then fails
    # in CI only. Floor == lock keeps local and CI byte-identical. Always invoke
    # via `uv run ruff` so the locked version is used, not a global/IDE install.
    "ruff>=0.15.12",
    # ty<0.0.54 flaked on the GtfsMode dict-comprehension inference (passed
    # locally, failed in CI on the same 0.0.34 build). Floor at the version
    # that infers it deterministically.
    "ty>=0.0.54",
    "pytest>=8.0",
    "greenlet>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flat_chat"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["B008"]  # Depends() in defaults is idiomatic FastAPI

[tool.pytest.ini_options]
testpaths = ["tests"]
