[project]
name = "flat-chat-ingestion"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "requests",
    "geopandas",
    "geoalchemy2",
    "pyogrio",
    "shapely",
    "pyproj"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
